src/objects/POIQuestion__c.object
<CustomObject>
    <fields>
        <fullName>AuditQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditQuestion</label>
        <referenceTo>AuditQuestion__c</referenceTo>
        <relationshipLabel>POIQuestions</relationshipLabel>
        <relationshipName>POIQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UIControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControl</label>
        <referenceTo>UIControl__c</referenceTo>
        <relationshipLabel>POIQuestions</relationshipLabel>
        <relationshipName>POIQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POIQuestion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POIQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>